# id_reader

./: .gitignore  CHANGES.md  CLAUDE.md  CMakeLists.txt  COPYING  README.md  TODO.md
examples/c/: simple_detection.c
examples/cpp/: document_detector_example.cpp
include/id_reader/: id_reader.h
src/api/: id_reader_api.cpp
src/preprocessing/document_detection/: document_detector.cpp  document_detector.h  iso_id1_document_detector.cpp  iso_id1_document_detector.h
tests/: README.md  detection_test_framework.cpp  synthetic_test_generator.cpp
tests/test_results_quick/: detailed_results.csv
